app/explore2/css/conzept/main.css
/* ... */
.entry.active {
  background-color: rgba(204, 204, 204, 0.16);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
}

.articles:focus, .articles:hover {
  background-color: rgba(204, 204, 204, 0.16);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
}

.list-slider {
  width: 85%;
  max-width: 500px;
  margin: 2.3rem 1rem 2rem 1.5rem;
}

.date {
  padding: 2px 5px 2px 5px;
  position: relative;
  border-radius: 0.5rem 0.7rem 0.7rem 0.5rem;
  border: 1px solid transparent;
}
.date.active {
  background-color: rgba(204, 204, 204, 0.16);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
}
.date:hover {
  background-color: rgba(87, 85, 85, 0.08);
}

.event-link {
  float: right;
  font-size: 1.5rem;
  margin: 0 0.2rem;
  padding: 0.4rem;
}

.article-title.date.linkblock2:hover {
  background: 0 0;
}
.article-title.linkblock:hover {
  /*color: #ba444a !important;*/
}

.date .linkblock2 {
  padding-bottom: 0;
}

.date-title {
  border: 2px solid #d81e1e80;
  padding: 2px 6px 4px 6px !important;
  border-radius: 8px;
}
.date-title:hover {
  cursor: pointer;
}

.splitter_panel {
  position: relative;
}
.splitter_panel .vsplitter {
  background-color: #80808014;
  cursor: col-resize;
  z-index: 900;
  width: 5px;
}

.vsplitter {
  position: relative;
  overflow: visible !important;
}

#splitter-toggle {
  position: absolute;
  left: 0.4rem;
  top: 50%;
}

.splitter_panel .hsplitter {
  background-color: #5f5f5f;
  cursor: row-resize;
  z-index: 800;
  height: 2px;
}
.splitter_panel .hsplitter.splitter-invisible {
  background: 0 0;
}
.splitter_panel .vsplitter.splitter-invisible {
  background: 0 0;
}
.splitter_panel .bottom_panel, .splitter_panel .hsplitter, .splitter_panel .left_panel, .splitter_panel .right_panel, .splitter_panel .top_panel, .splitter_panel .vsplitter {
  position: absolute;
  overflow: 100%;
}
.splitter_panel .left_panel, .splitter_panel .right_panel, .splitter_panel .vsplitter {
  height: 100%;
  overflow-y: hidden;
}
.splitter_panel .bottom_panel, .splitter_panel .hsplitter, .splitter_panel .top_panel {
  width: 100%;
}
.splitter_panel .left_panel, .splitter_panel .top_panel, .splitter_panel .vsplitter {
  top: 0;
}
.splitter_panel .bottom_panel, .splitter_panel .hsplitter, .splitter_panel .left_panel, .splitter_panel .top_panel {
  left: 0;
}
.splitter_panel .bottom_panel {
  bottom: 0;
}
.splitter_panel .right_panel {
  right: 0;
}

.splitterMask {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1000;
}

a {
  text-decoration: none;
  color: #3f3f3f;
}
a:link {
  text-decoration: none;
  color: #3f3f3f;
}

details[open].conf summary ~ * {
  animation: sweep 0.5s ease-in-out;
}

@keyframes sweep {
  0% {
    opacity: 0;
    margin-left: -10px;
  }
  100% {
    opacity: 1;
    margin-left: 0;
  }
}

#structured-query-output-type {
  margin-left: 1em;
}

.wikit-LookupInput__menu.wikit, .wikit .wikit-LookupInput__menu {
  z-index: 999999999 !important;
  width: 90%;
}

.summary, .topic-description {
  color: black;
  font-size: 97%;
  line-height: 130%;
  font-weight: 300;
  padding-bottom: 3px;
  /*margin-left: 1%;*/
  margin-right: 2%;
  margin-top: 0.2rem;
  hyphens: auto;
  /*text-align: justify;*/
}

.item-description {
  /*margin-left: 1%;*/
}

.topic-description {
  font-weight: 450;
}

.topic-description.motto {
  font-style: oblique;
  font-size: 90%;
}

.topic-description.formula {
  margin-top: .5rem;
  border: 1px solid #00000047;
  width: max-content;
  padding: 0.5rem 0.5rem;
  border-radius: 0.3rem;
  max-width: 96%;
  overflow-x: hidden;
}

.medialinks {
  padding: 1rem 1rem;
  display: inline-block;
  padding-left: 0.6rem;
  font-size: 120%;
  line-height: 230%;
  width: 95%;
}

.medialinks details {
  line-height: 200% !important;
  margin-bottom: 0.3rem;
}

div#links .medialinks {
  margin-left: 3%;
  padding: 3px 4px;
}

.article-title.linkblock:focus {
  color: #ee6e73 !important;
  outline: 0 !important;
  border: none;
}

/*
.medialinks a:focus, .medialinks a:hover {
  color: #ee6e73 !important;
  outline: 0;
  border: none;
}
*/

summary.more.bt {
  line-height: 1rem;
  margin-bottom: 1rem;
}

.more-details:focus, summary.bt:focus {
  color: #ee6e73 !important;
  outline: 0 !important;
  border: none;
}

.medialinks .fa, .medialinks .fa-brands, .medialinks .fa-regular, .medialinks .fa-solid {
  padding-right: 0.3rem;
}

.tinytext {
  font-size: 50%;
}

audio::-moz-media-controls-mute-button, audio::-ms-media-controls-mute-button, audio::-webkit-media-controls-mute-button, audio::media-controls-mute-button, audio::-moz-media-controls-volume-slider, audio::-ms-media-controls-volume-slider, audio::-webkit-media-controls-volume-slider, audio::media-controls-volume-slider {
  display: none !important;
}

.audio-widget {
  margin: 0.5rem 0.5rem 0.1rem 0.5rem;
}

.inline-audio {
  width: 100%;
  margin-top: 0.2rem;
}

audio {
  border-radius: 0.3rem;
}

.article-title {
  font-weight: 400;
  color: #000;
}

.article-title.linkblock {
  font-weight: 600;
}

.date-title {
  font-weight: 400;
  color: #000;
}

.book-title {
  font-size: 1.1rem;
  line-height: 1.2rem;
  font-weight: 420;
}

div#swipe-4 li {
  counter-increment: myCounter;
}

.wikischool-page {
  text-transform: capitalize;
}

.linkblock {
  display: inline-block;
  width: 100%;
  height: 100%;
}

.linkblock2 {
  display: inline-block;
  padding-bottom: 10px;
  width: 100%;
  height: 100%;
}

div#swipe-4 ol, div#swipe-4 ul {
  padding-left: 5px;
  margin-top: 5px;
  margin-right: 1px;
}
div#swipe-4 li {
  background: 0 0;
  counter-increment: myCounter;
  margin: 0 5px 10px;
  padding: 7px 5px 7px 5px;
  position: relative;
  border-radius: 0.5rem 0.7rem 0.7rem 0.5rem;
}

.logo {
  width: 70%;
  height: 70%;
  display: block;
  background-size: contain;
  padding: 2px 0 2px 10px;
}

.tabs {
  height: 40px;
}
/* ... */

